--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <body>
     <!-- 頁首選單 -->
     <div id="header">
+      <input type="checkbox" id="burgershow" style="display: none" />
       <ul class="header-menu">
         <li>
           <a href="index.html"><img src="imgs/LOGO.jpg" alt="" /></a>
@@ -25,6 +26,10 @@
         <li><a href="#about">關於我們</a></li>
         <li><a href="#sub">訂閱我們</a></li>
       </ul>
+      <label for="burgershow" class="burger-menu">
+        <div class="burger"></div>
+      </label>
+      <ul class="down-menu hidden"></ul>
     </div>
 
     <div class="main">
@@ -140,24 +145,74 @@
     <!-- 頁尾 -->
     <div id="footer">
       <div class="footer-content">
+        <input
+          type="checkbox"
+          id="shopline"
+          style="display: none; position: absolute; z-index: -999"
+        />
+        <input
+          type="checkbox"
+          id="source"
+          style="display: none; position: absolute; z-index: -999"
+        />
+        <input
+          type="checkbox"
+          id="social"
+          style="display: none; position: absolute; z-index: -999"
+        />
         <div class="shopline">
-          <h3>人才招募</h3>
+          <label for="shopline">
+            <h3 class="icon">人才招募</h3>
+          </label>
           <a href="">關於我們</a>
           <a href="">合作機會</a>
           <a href="">精選夥伴</a>
+          <ul class="hidden pcnone">
+            <li><a href="">關於我們</a></li>
+            <li><a href="">合作機會</a></li>
+            <li><a href="">精選夥伴</a></li>
+          </ul>
         </div>
+
         <div class="source">
-          <h3>開店資源</h3>
+          <label for="source">
+            <h3 class="icon">開店資源</h3>
+          </label>
           <a href="">POS 硬體</a>
           <a href="">新手問答</a>
+          <ul class="hidden pcnone">
+            <li><a href="">POS 硬體</a></li>
+            <li><a href="">新手問答</a></li>
+          </ul>
         </div>
+
         <div class="social">
-          <h3>社群</h3>
+          <label for="social">
+            <h3 class="icon">社群</h3>
+          </label>
           <a href=""><i class="fa-brands fa-instagram"></i>Instagram</a>
           <a href=""><i class="fa-brands fa-facebook-square"></i>Fackbook</a>
           <a href=""><i class="fa-brands fa-line"></i>LINE</a>
           <a href=""><i class="fa-brands fa-discord"></i>Discord</a>
+
+          <ul class="hidden pcnone">
+            <li>
+              <a href=""><i class="fa-brands fa-instagram"></i>Instagram</a>
+            </li>
+            <li>
+              <a href=""
+                ><i class="fa-brands fa-facebook-square"></i>Fackbook</a
+              >
+            </li>
+            <li>
+              <a href=""><i class="fa-brands fa-line"></i>LINE</a>
+            </li>
+            <li>
+              <a href=""><i class="fa-brands fa-discord"></i>Discord</a>
+            </li>
+          </ul>
         </div>
+
         <div id="sub">
           <h3>訂閱我們</h3>
           <form action="">
@@ -176,4 +231,59 @@
       </div>
     </div>
   </body>
+
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"
+    integrity="sha512-DUC8yqWf7ez3JD1jszxCWSVB0DMP78eOyBpMa5aJki1bIRARykviOuImIczkxlj1KhVSyS16w2FSQetkD4UU2w=="
+    crossorigin="anonymous"
+  ></script>
+
+  <script>
+    let ele = [
+      {
+        h3: document.querySelector(".shopline h3"),
+        ul: document.querySelector(".shopline ul"),
+      },
+      {
+        h3: document.querySelector(".social h3"),
+        ul: document.querySelector(".social ul"),
+      },
+      {
+        h3: document.querySelector(".source h3"),
+        ul: document.querySelector(".source ul"),
+      },
+    ];
+    let burgerMenu = document.querySelector(".burger-menu");
+    let burger = document.querySelector(".burger");
+
+    ele.forEach((item) => {
+      item.h3.addEventListener("click", () => {
+        if (item.ul.classList.contains("hidden")) {
+          item.ul.classList.remove("hidden");
+          item.ul.classList.add("slide");
+        } else {
+          item.ul.classList.remove("slide");
+          item.ul.classList.add("hidden");
+        }
+      });
+    });
+
+    burgerMenu.addEventListener("click", function () {
+      let rwdMenu = document.querySelector(".down-menu");
+      rwdMenu.innerHTML =
+        '<li><a href="index.html">首頁</a></li><li><a href="#product">產品介紹</a></li><li><a href="#about">關於我們</a></li><li><a href="#sub">訂閱我們</a></li>';
+      slideDown(rwdMenu);
+    });
+
+    function slideDown(rwdMenu) {
+      if (rwdMenu.classList.contains("hidden")) {
+        rwdMenu.classList.remove("hidden");
+        rwdMenu.classList.add("slide");
+      } else {
+        rwdMenu.classList.remove("slide");
+        rwdMenu.classList.add("hidden");
+      }
+      return rwdMenu;
+    }
+  </script>
 </html>
