--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
     </div>
 
     <script>
+      //footer show
       let ele = [
         {
           h3: document.querySelector(".shopline h3"),
